--- a/Dodoplier/app/src/main/res/values/colors.xml
+++ b/Dodoplier/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#8E94F2</color>
+    <color name="colorPrimaryDark">#5438DC</color>
+    <color name="colorAccent">#8EF9F3</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
