--- a/Dodoplier/app/src/main/res/layout/activity_explore_organizations.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_explore_organizations.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".explore_organizations">
 
+    <TextView
+        android:id="@+id/explore_orgs_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Select an organization"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
