added bottom nav bars on everything and added fonts

--- a/Dodoplier/app/src/main/res/values/colors.xml
+++ b/Dodoplier/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#5438DC</color>
     <color name="colorAccent">#8EF9F3</color>
     <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#F7F9F9</color>
 </resources>
