--- a/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
@@ -2,15 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/explore_causes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrganizationInfo">
+    android:backgroundTint="@color/white"
+    tools:context=".ExploreCauses">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="410dp"
         android:layout_height="72dp"
-        android:backgroundTint="@color/white"
         app:backgroundTint="@color/white"
         app:elevation="8dp"
         app:itemIconTint="@color/colorPrimary"
