--- a/Dodoplier/app/src/main/res/values/styles.xml
+++ b/Dodoplier/app/src/main/res/values/styles.xml
@@ -5,6 +5,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+
+    <style name="inter">
+        <item name="font">@font/inter</item>
+    </style>
+
+    <style name="questrial">
+        <item name="font">@font/questrial</item>
     </style>
 
 </resources>
