--- a/Dodoplier/app/src/main/res/layout/activity_profile.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_profile.xml
@@ -7,4 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="0dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="660dp"
+        android:backgroundTint="@color/white"
+        app:backgroundTint="@color/white"
+        app:elevation="8dp"
+        app:itemIconTint="@color/colorPrimary"
+        app:itemRippleColor="@color/colorPrimary"
+        app:itemTextColor="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
