--- a/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
@@ -2,17 +2,171 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExploreCauses">
+    tools:context=".Profile">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="0dp"
+        android:layout_height="72dp"
+        android:backgroundTint="@color/white"
+        app:backgroundTint="@color/white"
+        app:elevation="8dp"
+        app:itemIconTint="@color/colorPrimary"
+        app:itemRippleColor="@color/colorPrimary"
+        app:itemTextColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="413dp"
+        android:layout_height="534dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title2">
+
+        <Button
+            android:id="@+id/education"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="26dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Education"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/health"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+
+        <Button
+            android:id="@+id/arts"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="26dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Arts + Culture"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/education"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+
+        <Button
+            android:id="@+id/human_services"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="120dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Human Services"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+
+        <Button
+            android:id="@+id/health"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="26dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Health"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/human_services"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+
+        <Button
+            android:id="@+id/animals"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="26dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Animals"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/community"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/community"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="26dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Community Development"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/environment"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/environment"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="26dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Environment"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/human"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/human"
+            android:layout_width="137dp"
+            android:layout_height="83dp"
+            android:layout_marginBottom="120dp"
+            android:backgroundTint="@color/black"
+            android:fontFamily="@font/inter_bold"
+            android:text="Human + Civil Rights"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="208dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/title"
+        android:layout_width="351dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/inter_bold"
+        android:text="Donation Category"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/title2"
+        android:layout_width="250dp"
+        android:layout_height="27dp"
+        android:fontFamily="@font/questrial"
+        android:text="Choose your impact."
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
