add back btn icon and stuff

--- a/Dodoplier/app/src/main/res/drawable/white_button.xml
+++ b/Dodoplier/app/src/main/res/drawable/white_button.xml
@@ -2,21 +2,21 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
         <item android:state_pressed="true" >
             <shape android:shape="rectangle"  >
-                <corners android:radius="5dip" />
-                <stroke android:width="1dip" android:color="#5e7974" />
-                <gradient android:angle="-90" android:startColor="@color/white" android:endColor="@color/colorPrimary"  />
+                <corners android:radius="30dip" />
+                <stroke android:width="0dip" android:color="#FBFBFB" />
+                <gradient android:angle="-90" android:startColor="#C4C7FF" android:endColor="#C7CAFF"  />
             </shape>
         </item>
         <item android:state_focused="true">
             <shape android:shape="rectangle"  >
-                <corners android:radius="5dip" />
+                <corners android:radius="30dip" />
                 <stroke android:width="1dip" android:color="@color/colorPrimary" />
                 <solid android:color="#58857e"/>
             </shape>
         </item>
         <item >
             <shape android:shape="rectangle"  >
-                <corners android:radius="5dip" />
+                <corners android:radius="30dip" />
                 <stroke android:width="0dip" android:color="@color/black" />
                 <gradient android:angle="-90" android:startColor="@color/white" android:endColor="@color/white" />
             </shape>
