--- a/Dodoplier/app/src/main/res/layout/activity_organization_info.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_organization_info.xml
@@ -11,7 +11,7 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/org_info_bg"
         android:padding="25dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,24 +20,39 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
+        <ImageButton
+            android:id="@+id/orgInfoPageBackBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/left1"
+            android:backgroundTint="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/orgPageTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_bold"
+            android:gravity="center"
+            android:maxWidth="300dp"
             android:text="Nothing in Space"
             android:textColor="@color/white"
             android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/orgPageCause"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/orgPageCause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="13dp"
+            android:fontFamily="@font/questrial"
             android:maxWidth="200dp"
             android:text="Medical Research"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -45,29 +60,35 @@
             android:id="@+id/orgPageTagline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:shadowColor="@color/black"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/inter"
+            android:gravity="center"
+            android:maxWidth="350dp"
             android:shadowDx="3"
             android:shadowDy="3"
             android:shadowRadius="5"
-            android:text="Reaching beyond the bounds of reality"
+            android:text="Reaching beyond the bounds of reality "
             android:textColor="@color/white"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/orgPageTitle"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.683" />
+            app:layout_constraintTop_toBottomOf="@+id/orgPageTitle" />
 
         <Button
             android:id="@+id/learnMoreBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             android:background="@drawable/white_button"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:fontFamily="@font/inter_bold"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:shadowDx="3"
+            android:shadowDy="3"
+            android:shadowRadius="5"
             android:text="Visit Site"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -75,6 +96,7 @@
             android:id="@+id/orgPageScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/questrial"
             android:text="94.3 / 100"
             android:textColor="@color/white"
             android:textSize="24sp"
@@ -85,6 +107,7 @@
             android:id="@+id/scoreLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/inter"
             android:text="Accountability Score"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,30 +119,32 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout4"
         android:layout_width="match_parent"
-        android:layout_height="470dp"
+        android:layout_height="450dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            tools:layout_editor_absoluteX="130dp"
+            tools:layout_editor_absoluteY="136dp">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="147dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:text="Donate"
-                android:textColor="#000000"
-                android:textSize="30sp" />
-        </LinearLayout>
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="147dp"
+                    android:layout_height="wrap_content"
+                    android:text="Donate"
+                    android:textColor="#000000"
+                    android:textSize="30sp" />
+            </LinearLayout>
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
  <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
