--- a/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
@@ -26,8 +26,9 @@
         android:id="@+id/constraintLayout"
         android:layout_width="413dp"
         android:layout_height="534dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title2">
 
@@ -148,12 +149,13 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="351dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
+        style="@style/title_text"
+        android:layout_width="352dp"
+        android:layout_height="93dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/inter_bold"
-        android:text="Donation Category"
+        android:text="@string/explore_causes_title"
         android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,10 +163,11 @@
 
     <TextView
         android:id="@+id/title2"
+        style="@style/subtext"
         android:layout_width="250dp"
         android:layout_height="27dp"
         android:fontFamily="@font/questrial"
-        android:text="Choose your impact."
+        android:text="@string/explore_causes_subtitle"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/title"
