--- a/Dodoplier/app/src/main/res/values/styles.xml
+++ b/Dodoplier/app/src/main/res/values/styles.xml
@@ -9,15 +9,27 @@
     </style>
 
     <style name="title_text">
-        <item name="font">@font/inter_bold</item>
+        <item name="android:fontFamily">@font/inter_bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">30sp</item>
     </style>
 
     <style name="subtext">
-        <item name="font">@font/questrial</item>
+        <item name="android:fontFamily">@font/questrial</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="smaller_subtext">
+        <item name="android:fontFamily">@font/questrial</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="button_cap_text">
+        <item name="android:fontFamily">@font/inter_bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
