fixed some scrolling

--- a/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_explore_causes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile">
+    tools:context=".ExploreCauses">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -24,13 +24,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="413dp"
-        android:layout_height="534dp"
+        android:layout_width="411dp"
+        android:layout_height="570dp"
         android:layout_marginTop="28dp"
+        android:onClick="causeClicked"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title2">
+        app:layout_constraintTop_toBottomOf="@+id/title2"
+        app:layout_constraintVertical_bias="0.307">
 
         <Button
             android:id="@+id/education"
@@ -39,6 +42,7 @@
             android:layout_marginBottom="26dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Education"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/health"
@@ -52,6 +56,7 @@
             android:layout_marginBottom="26dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Arts + Culture"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/education"
@@ -65,6 +70,7 @@
             android:layout_marginBottom="120dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Human Services"
             android:textColor="@color/white"
             android:textSize="14sp"
@@ -79,6 +85,7 @@
             android:layout_marginBottom="26dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Health"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/human_services"
@@ -92,6 +99,7 @@
             android:layout_marginBottom="26dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Animals"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/community"
@@ -105,6 +113,7 @@
             android:layout_marginBottom="26dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Community Development"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/environment"
@@ -118,6 +127,7 @@
             android:layout_marginBottom="26dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Environment"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/human"
@@ -131,6 +141,7 @@
             android:layout_marginBottom="120dp"
             android:backgroundTint="@color/black"
             android:fontFamily="@font/inter_bold"
+            android:onClick="causeClicked"
             android:text="Human + Civil Rights"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +154,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="208dp" />
+            app:layout_constraintGuide_begin="206dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
