--- a/Dodoplier/app/src/main/res/drawable/org_info_list_bg.xml
+++ b/Dodoplier/app/src/main/res/drawable/org_info_list_bg.xml
@@ -3,8 +3,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="30dip" />
-            <stroke android:width="0dip" android:color="@color/black" />
-            <gradient android:angle="-45" android:startColor="#30179E" android:endColor="#6A70EC" />
+            <stroke android:width="1dip" android:color="@color/black" />
+            <gradient android:angle="-45" android:startColor="#FFFFFF" android:endColor="#FFFFFF" />
         </shape>
     </item>
 </selector>
