--- a/Dodoplier/app/src/main/res/layout/activity_profile.xml
+++ b/Dodoplier/app/src/main/res/layout/activity_profile.xml
@@ -22,4 +22,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="131dp"
+        tools:layout_editor_absoluteY="174dp"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
